--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-# temp nibs and swap files
-*~.nib
-*.swp
+# Source: https://robots.thoughtbot.com/creating-your-first-ios-framework
 
-# OS X folder attributes
+## OS X Finder
 .DS_Store
 
-# https://github.com/github/gitignore/blob/master/Objective-C.gitignore
+## Build generated
 build/
+DerivedData
+
+## Various settings
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -16,9 +17,16 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata
+
+## Other
 *.xccheckout
 *.moved-aside
-DerivedData
+*.xcuserstate
+*.xcscmblueprint
+
+## Obj-C/Swift specific
 *.hmap
 *.ipa
-*.xcuserstate
+
+# Swift Package Manager
+.build/
